--- a/cadastro/public/index.html
+++ b/cadastro/public/index.html
@@ -9,7 +9,7 @@
         body {
             background-color: #2a2a72;
             color: #ffffff;
-            font-family: 'Helvetica Neue', Arial, sans-serif; /* Fonte semelhante à da Apple */
+            font-family: 'Helvetica Neue', Arial, sans-serif; 
             display: flex;
             justify-content: center;
             align-items: center;
